src/css/App.css
.App {
  overflow: scroll;
}

.row {
  margin: 0;
}

.backdrop {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 0;
}

.sub-title {
  color: white;
  font-family: 'Lobster', cursive !important;
  font-weight: 100 !important;
  font-size: 30px;
  text-align: center
}

.title-grad {
  font-size: 36px;
  background: linear-gradient(45deg, #a58fe9, #ff5566);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.page-title {
  display: block;
  width: fit-content;
  text-align: center;
  font-size: 36px;
  position: relative;
  margin: 100px auto 50px auto;
}

.page-title:after {
  position: absolute;
  content: ' ';
  top: 50%;
  left: 100%;
  margin: 0 10px;
  width: 150px;
  height: 5px;
  background-color: white;
}

.page-title:before {
  position: absolute;
  content: ' ';
  top: 50%;
  right: 100%;
  margin: 0 10px;
  width: 150px;
  height: 5px;
  background-color: white;
}

.tags {
  pointer-events: none;
  padding: 5px 10px;
  margin-right: 10px;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
  background-color: transparent;
  font-size: 12px;
}

.bg-wave {
  position: absolute;
  width: 100%;
  height: 100%;
  top: -30%;
  left: 0px;
  fill: white;
  opacity: 0.1
}

.backdrop {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1;
}

@media all and (max-width: 900px) {
  .bg-wave {
    display: none;
  }
}

